welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:21: error: not found: value getTerrainHauteur
    if (getY() > getTerrainHauteur() - 1)
                 ^